compiler/test/fail_compilation/e15876_4.d
/*
TEST_OUTPUT:
---
fail_compilation/e15876_4.d(8): Error: found `)` when expecting `(`
fail_compilation/e15876_4.d(9): Error: found `End of File` when expecting `(`
---
*/
typeof){for
